aanpassing: inloggen.html, persoonsgegevens.html, css, ham.js

--- a/uc8-uc9/Inloggen.html
+++ b/uc8-uc9/Inloggen.html
@@ -8,8 +8,8 @@
     <title>Inlogpagina</title>
 </head>
 <body>
-    <div class="wrapper">
-        <form action="" method="get">
+    <div class="container">
+        <form action="" method="POST">
             <div class="input-control">
                 <input type="text" name="" id="name" placeholder="username">
             </div>
@@ -22,6 +22,8 @@
                 <input type="button" name="" class="button" id="submit" value="Submit">
             </div>
         </form>
+    </div>
+    <div class="skew-container">
         <div class="skew-box"></div>
         <div class="skew-box"></div>
     </div>
