Aanpassing: CSS, completed_logout_HTML, inloggen_HTML en persoonsgegevens_HTML

--- a/uc8-uc9/completed_logout.html
+++ b/uc8-uc9/completed_logout.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="hamburger">
-                <a href="index.html">
+                <a href="inloggen.html">
                     <h2>EXIT</h2>
                 </a>
                 <a href="bestemmingen.html">
@@ -44,7 +44,7 @@
                     <div class="hi-user">hi, user</div>
                     <h3>Uw bestelling</h3>
                     <div class="complete">
-                        <a href="index.html">
+                        <a href="inloggen.html">
                             <div class="complete-btn">
                                 Voltooid en log uit
                             </div>
