--- a/uc8-uc9/persoonsgegevens.html
+++ b/uc8-uc9/persoonsgegevens.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="hamburger">
-                <a href="index.html">
+                <a href="inloggen.html">
                     <h2>EXIT</h2>
                 </a>
             </div>
