HTML-skeleton voorbeeld voor "bestemming". Aanpassing: bestemmingen_HTML, inloggen_HTML en persoonsgegevens_HTML.

--- a/uc8-uc9/bestemmingen.html
+++ b/uc8-uc9/bestemmingen.html
@@ -11,7 +11,6 @@
     <header>
         <nav>
             <div class="headerbg">
-                <!-- <img src="img/bg_1.jpg" alt="" srcset=""> -->
             </div>
             <div class="page-name">
                 <div class="profile-picture">
@@ -21,16 +20,14 @@
                 </div>
                 <div class="hi-user">hi, user</div>
                 <h2>Bestemmingen</h2>
-                <!-- <div class="page-name-card">
-                </div> -->
             </div>
-            <!-- <div class="event-raad">
+            <div class="event-raad">
                 <a href="event_raadplegen.html">
                     Event Raadplegen
                 </a>
-            </div> -->
+            </div>
             <div class="hamburger">
-                <a href="index.html">
+                <a href="inloggen.html">
                     <h2>EXIT</h2>
                 </a>
                 <a href="bestemmingen.html">
@@ -50,5 +47,18 @@
             </div>
         </nav>
     </header>
+    <main>
+        <div class="container-bestemming">
+            
+        </div>
+    </main>
+    <footer>
+        <p></p>
+    </footer>
+    <div class="skew-container">
+
+    </div>
+
+    <script src=""></script>
 </body>
 </html>
