--- a/uc8-uc9/persoonsgegevens.html
+++ b/uc8-uc9/persoonsgegevens.html
@@ -45,7 +45,7 @@
                     <input type="text" name="" id="email" placeholder="email">
                 </div>
                     <div class="input-control">
-                    <input type="button" name="" class="button" id="submit" value="Submit">
+                    <input type="submit" name="" class="button" id="submit" value="Aanpassen">
                 </div>
             </form>
         </div>
