bestemming_HTML gepuscht.

--- a/uc8-uc9/Inloggen.html
+++ b/uc8-uc9/Inloggen.html
@@ -19,7 +19,7 @@
             </div>
             
             <div class="input-control">
-                <input type="button" name="" class="button" id="submit" value="Submit">
+                <input type="submit" name="" class="button" id="submit" value="Log in">
             </div>
         </form>
     </div>
