--- a/uc8-uc9/bestemming.html
+++ b/uc8-uc9/bestemming.html
@@ -4,22 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/style.css">
     <title>Bestemming</title>
 </head>
 <body>
     <header>
-
+        <div class="hamburger">
+            <a href="inloggen.html">
+                <h2>EXIT</h2>
+            </a>
+            <a href="bestemmingen.html">
+                <h2>Bestemmingen</h2>
+            </a>
+            <a href="event_raadplegen.html">
+                <h2>Event raadplegen</h2>
+            </a>
+        </div>
+        <div class="search">
+            <div class="search-2"></div>
+            <div class="search-1"></div>
+        </div>
+        <div class="hambox">
+            <div class="ham-1"></div>
+            <div class="ham-2"></div>
+        </div>
+    </nav>
     </header>
     <main>
         <div class="container-bestemmming">
-            <h1>Bestellen</h1>
+            <div class="detail-card">
+                <img src="img/pexels-pixabay-417344.jpg" alt="">
+                <div class="info">
+                    <div class="profile-picture">
+                        <a href="" class="profile">
+                            <img src="img/pexels-wojciech-kumpicki-2071881.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="hi-user">hi, user</div>
+                    <a href="bestellen.html">
+                        <div class="bestellen-btn">
+                            <h1>Bestellen</h1>
+                        </div>
+                    </a>
+                </div>
+            </div>
         </div>
     </main>
     <div class="skew-container">
-
+        <div class="skew-box"></div>
+        <div class="skew-box"></div>
     </div>
 
-    <script src=""></script>
+    <script src="js/ham.js"></script>
 </body>
 </html>
