Aanpassing: bestemmingen CSS.

--- a/uc8-uc9/bestemmingen.html
+++ b/uc8-uc9/bestemmingen.html
@@ -49,6 +49,15 @@
     </header>
     <main>
         <div class="container-bestemming">
+            <div class="bestemming-box">
+                <img src="img/pexels-pixabay-417344.jpg" alt="">
+                <div class="card">
+                    <h5>Bestemmingen</h5>
+                    <div class="subcard">
+                        <a href="bestemming.html"">Moer informatie</a>
+                    </div>
+                </div>
+            </div>
             
         </div>
     </main>
