Bestemmingen.html + al een aantal bestemmingen

--- a/uc8-uc9/bestemmingen.html
+++ b/uc8-uc9/bestemmingen.html
@@ -50,16 +50,117 @@
     <main>
         <div class="container-bestemming">
             <div class="bestemming-box">
-                <img src="img/pexels-pixabay-417344.jpg" alt="">
+                <img src="img/Barcelona.jpg" alt="">
                 <div class="card">
-                    <h5>Bestemmingen</h5>
+                    <h5>Barcelona</h5>
                     <div class="subcard">
-                        <a href="bestemming.html"">Moer informatie</a>
+                        <a href="bestemming.html">Meer informatie</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="bestemming-box">
+                <img src="img/Budapest.jpg" alt="">
+                <div class="card">
+                    <h5>Budapest</h5>
+                    <div class="subcard">
+                        <a href="bestemming.html">Meer informatie</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="bestemming-box">
+                <img src="img/Ijsland.jpg" alt="">
+                <div class="card">
+                    <h5>Ijsland</h5>
+                    <div class="subcard">
+                        <a href="bestemming.html">Meer informatie</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="bestemming-box">
+                <img src="img/Londen.jpg" alt="">
+                <div class="card">
+                    <h5>Londen</h5>
+                    <div class="subcard">
+                        <a href="bestemming.html">Meer informatie</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="bestemming-box">
+                <img src="img/Madrid.jpg" alt="">
+                <div class="card">
+                    <h5>Madrid</h5>
+                    <div class="subcard">
+                        <a href="bestemming.html">Meer informatie</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="bestemming-box">
+                <img src="img/Moscow.jpg" alt="">
+                <div class="card">
+                    <h5>Moscow</h5>
+                    <div class="subcard">
+                        <a href="bestemming.html">Meer informatie</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="bestemming-box">
+                <img src="img/New-York.jpg" alt="">
+                <div class="card">
+                    <h5>New York</h5>
+                    <div class="subcard">
+                        <a href="bestemming.html">Meer informatie</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="bestemming-box">
+                <img src="img/Parijs.jpg" alt="">
+                <div class="card">
+                    <h5>Parijs</h5>
+                    <div class="subcard">
+                        <a href="bestemming.html">Meer informatie</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="bestemming-box">
+                <img src="img/Rome.jpg" alt="">
+                <div class="card">
+                    <h5>Rome</h5>
+                    <div class="subcard">
+                        <a href="bestemming.html">Meer informatie</a>
                     </div>
                 </div>
             </div>
             
+            <div class="bestemming-box">
+                <img src="img/Sidney.jpg" alt="">
+                <div class="card">
+                    <h5>Sidney</h5>
+                    <div class="subcard">
+                        <a href="bestemming.html">Meer informatie</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="bestemming-box">
+                <img src="img/Amsterdam.jpg" alt="">
+                <div class="card">
+                    <h5>Amsterdam</h5>
+                    <div class="subcard">
+                        <a href="bestemming.html">Meer informatie</a>
+                    </div>
+                </div>
+            </div>
         </div>
+
+    
     </main>
     <footer>
         <p></p>
