persoonsgegevens_aanpassing_HTML gepusht.

--- a/uc8-uc9/bestemming.html
+++ b/uc8-uc9/bestemming.html
@@ -36,7 +36,7 @@
                 <img src="img/pexels-pixabay-417344.jpg" alt="">
                 <div class="info">
                     <div class="profile-picture">
-                        <a href="" class="profile">
+                        <a href="persoonsgegevens.aanpassen.html" class="profile">
                             <img src="img/pexels-wojciech-kumpicki-2071881.jpg" alt="">
                         </a>
                     </div>
