--- a/uc8-uc9/bestemmingen.html
+++ b/uc8-uc9/bestemmingen.html
@@ -14,7 +14,7 @@
             </div>
             <div class="page-name">
                 <div class="profile-picture">
-                    <a href="persoonsgevens_aanpassing.html" class="profile">
+                    <a href="persoonsgegevens.aanpassen.html" class="profile">
                         <img src="img/pexels-wojciech-kumpicki-2071881.jpg" alt="" srcset="">
                     </a>
                 </div>
