--- a/uc8-uc9/completed_logout.html
+++ b/uc8-uc9/completed_logout.html
@@ -37,7 +37,7 @@
                 <img src="img/pexels-pixabay-417344.jpg" alt="" srcset="">
                 <div class="info">
                     <div class="profile-picture">
-                        <a href="persoonsgevens_aanpassing.html" class="profile">
+                        <a href="persoonsgegevens.aanpassen.html" class="profile">
                             <img src="img/pexels-wojciech-kumpicki-2071881.jpg" alt="" srcset="">
                         </a>
                     </div>
