events HTML & CSS gepusht.

--- a/uc8-uc9/bestemmingen.html
+++ b/uc8-uc9/bestemmingen.html
@@ -158,15 +158,14 @@
                     </div>
                 </div>
             </div>
-        </div>
-
-    
+        </div>    
     </main>
     <footer>
-        <p></p>
+        <p>AP Programmeren 2021</p>
     </footer>
     <div class="skew-container">
-
+        <div class="skew-box"></div>
+        <div class="skew-box"></div>
     </div>
 
     <script src="js/ham.js"></script>
