Aanpassing: events HTML & CSS. Continu verbeteren: Meer details in de stories.

--- a/uc8-uc9/bestemmingen.html
+++ b/uc8-uc9/bestemmingen.html
@@ -161,7 +161,30 @@
         </div>    
     </main>
     <footer>
-        <p>AP Programmeren 2021</p>
+        <p>
+            <b>Auteur</b>
+            <br>
+            Aerts Yarno, Guning Deng, Kabro Malek 
+            <br>
+            Opleiding: Programmeren.
+            <br>
+            Departement:
+            <a href="https://www.ap.be/departement/wetenschap-en-techniek" target="_blank" rel="noopener noreferrer">
+                Wetenschap en Techniek.
+            </a>
+            <br>
+            Insitutie naam:
+            <a href="https://www.ap.be/" target="_blank" rel="noopener noreferrer">
+                AP Hogeschool.
+            </a>
+            <br>
+                2021
+        </p>
+        <div class="footer-img">
+            <a href="https://github.com/MalekKabro/IT-Project-The_Guys.git" target="_blank" rel="noopener noreferrer">
+                <img src="img/git.png" alt="">
+            </a>
+        </div>
     </footer>
     <div class="skew-container">
         <div class="skew-box"></div>
