--- a/uc8-uc9/event.html
+++ b/uc8-uc9/event.html
@@ -43,11 +43,11 @@
                     </div>
                     <div class="hi-user">hi, user</div>
                     <h3>Uw Event</h3>
-                    <h4>Naam van event of attractie</h4>
+                    <h4>Naam van event of attractie.</h4>
                     <p2>__Jazz</p2>
                     <h4>Locate van ticketverkoopagentschappen.</h4>
                     <p2>Antwerpen</p2>
-                    <h4>Prijs</h4>
+                    <h4>Prijs:</h4>
                     <p2>30 €/per persoon</p2>
                     
 
