event raadplegen verbetering 1

--- a/uc8-uc9/event_raadplegen.html
+++ b/uc8-uc9/event_raadplegen.html
@@ -35,16 +35,16 @@
     <main>
         <div class="container-event">
             <form action="" method="POST">
-                <h4>Event Raadplegen</h4>  
-                <a>Naam van event of attractie.</a>                              
+                <h2>Event Raadplegen</h2>  
+                <p>Naam van event of attractie.</p>                              
                 <div class="input-control">
                     <input type="text" name="" id="Event" placeholder="">
                 </div>
-                <a>Locatie van het event of attractie.</a>                
+                <p>Locatie van het event of attractie.</p>                
                 <div class="input-control">
                     <input type="text" name="" id="Locatie" placeholder="">
                 </div> 
-                <a>Datum</a>               
+                <p>Datum</p>               
                 <div class="input-control">
                     <input type="text" name="" id="Datum" placeholder="01/01/2020">
                 </div>
