Continu verbeteren: gebruikersinterface, interactie, clear code, correcte tekst en informatie.

--- a/uc8-uc9/bestemmingen.html
+++ b/uc8-uc9/bestemmingen.html
@@ -162,7 +162,7 @@
     </main>
     <footer>
         <p>
-            <b>Auteur</b>
+            <b>Ontwikkeld door</b>
             <br>
             Aerts Yarno, Guning Deng, Kabro Malek 
             <br>
