--- a/uc8-uc9/events.html
+++ b/uc8-uc9/events.html
@@ -102,7 +102,7 @@
         </div>
         <footer>
             <p>
-                <b>Auteur</b>
+                <b>Ontwikkeld door</b>
                 <br>
                 Aerts Yarno, Guning Deng, Kabro Malek 
                 <br>
@@ -132,7 +132,6 @@
         </div>
 
         <script src="js/ham.js"></script>
-    </main>
-    
+    </main>    
 </body>
 </html>
