Continu verbeteren: sprint_3 week_2 v1.0

--- a/uc8-uc9/bestemming.html
+++ b/uc8-uc9/bestemming.html
@@ -17,7 +17,7 @@
                 <h2>Bestemmingen</h2>
             </a>
             <a href="event_raadplegen.html">
-                <h2>Event raadplegen</h2>
+                <h2>Events & Attracties Raadplegen</h2>
             </a>
         </div>
         <div class="search">
