--- a/uc8-uc9/bestemmingen.html
+++ b/uc8-uc9/bestemmingen.html
@@ -34,7 +34,13 @@
                     <h2>Bestemmingen</h2>
                 </a>
                 <a href="event_raadplegen.html">
-                    <h2>Event raadplegen</h2>
+                    <h2>Events & Attracties Raadplegen</h2>
+                </a>
+                <a href="events.html">
+                    <h2>Events & Attracties</h2>
+                </a>
+                <a href="persoonsgegevens.html">
+                    <h2>Persoongegevens</h2>
                 </a>
             </div>
             <div class="search">
