--- a/uc8-uc9/persoonsgegevens.html
+++ b/uc8-uc9/persoonsgegevens.html
@@ -14,6 +14,15 @@
                 <a href="inloggen.html">
                     <h2>EXIT</h2>
                 </a>
+                <a href="bestemmingen.html">
+                    <h2>Bestemmingen</h2>
+                </a>
+                <a href="event_raadplegen.html">
+                    <h2>Events & Attracties Raadplegen</h2>
+                </a>
+                <a href="events.html">
+                    <h2>Events & Attracties</h2>
+                </a>
             </div>
             <div class="search">
                 <div class="search-2"></div>
