--- a/uc8-uc9/event_raadplegen.html
+++ b/uc8-uc9/event_raadplegen.html
@@ -17,8 +17,8 @@
                 <a href="bestemmingen.html">
                     <h2>Bestemmingen</h2>
                 </a>
-                <a href="event_raadplegen.html">
-                    <h2>Event raadplegen</h2>
+                <a href="events.html">
+                    <h2>Events & Attracties</h2>
                 </a>
             </div>
             <div class="search">
