--- a/uc8-uc9/events.html
+++ b/uc8-uc9/events.html
@@ -19,7 +19,7 @@
                     </a>
                 </div>
                 <div class="hi-user">hi, user</div>
-                <h2>Events</h2>
+                <h2>Events & Attracties</h2>
             </div>
             <div class="hamburger">
                 <a href="inloggen.html">
@@ -29,7 +29,7 @@
                     <h2>Bestemmingen</h2>
                 </a>
                 <a href="event_raadplegen.html">
-                    <h2>Event raadplegen</h2>
+                    <h2>Events & Attracties Raadplegen</h2>
                 </a>
             </div>
             <div class="search">
