--- a/uc8-uc9/persoonsgegevens.aanpassen.html
+++ b/uc8-uc9/persoonsgegevens.aanpassen.html
@@ -18,7 +18,10 @@
                     <h2>Bestemmingen</h2>
                 </a>
                 <a href="event_raadplegen.html">
-                    <h2>Event raadplegen</h2>
+                    <h2>Events & Attracties Raadplegen</h2>
+                </a>
+                <a href="events.html">
+                    <h2>Events & Attracties</h2>
                 </a>
             </div>
             <div class="search">
