Schreijffout aanpassen events.html

--- a/uc8-uc9/events.html
+++ b/uc8-uc9/events.html
@@ -49,7 +49,7 @@
                 <div class="card">
                     <h5>Fashion 2021</h5>
                     <div class="subcard">
-                        <a href="event.html"">Moer informatie</a>
+                        <a href="event.html"">Meer informatie</a>
                     </div>
                 </div>
             </div>
@@ -58,7 +58,7 @@
                 <div class="card">
                     <h5>Bizzi / Night</h5>
                     <div class="subcard">
-                        <a href="event.html"">Moer informatie</a>
+                        <a href="event.html"">Meer informatie</a>
                     </div>
                 </div>
             </div>
@@ -67,7 +67,7 @@
                 <div class="card">
                     <h5>Crimson Thorn</h5>
                     <div class="subcard">
-                        <a href="event.html"">Moer informatie</a>
+                        <a href="event.html"">Meer informatie</a>
                     </div>
                 </div>
             </div>
@@ -76,7 +76,7 @@
                 <div class="card">
                     <h5>pKA</h5>
                     <div class="subcard">
-                        <a href="event.html"">Moer informatie</a>
+                        <a href="event.html"">Meer informatie</a>
                     </div>
                 </div>
             </div>
@@ -85,7 +85,7 @@
                 <div class="card">
                     <h5>Blue (.^^.) Rick</h5>
                     <div class="subcard">
-                        <a href="event.html"">Moer informatie</a>
+                        <a href="event.html"">Meer informatie</a>
                     </div>
                 </div>
             </div>
@@ -94,7 +94,7 @@
                 <div class="card">
                     <h5>@ *</h5>
                     <div class="subcard">
-                        <a href="event.html"">Moer informatie</a>
+                        <a href="event.html"">Meer informatie</a>
                     </div>
                 </div>
             </div>
