Continu verbeteren: sprint_3 week_2 v1.1

--- a/uc8-uc9/event_raadplegen.html
+++ b/uc8-uc9/event_raadplegen.html
@@ -34,12 +34,12 @@
     <main>
         <div class="container-event">
             <form action="" method="POST">
-                <h2>Event Raadplegen</h2>  
-                <p>Naam van event of attractie.</p>                              
+                <h2>Events & attracties Raadplegen</h2>  
+                <p>Naam van event of attractie</p>                              
                 <div class="input-control">
                     <input type="text" name="" id="Event" placeholder="">
                 </div>
-                <p>Locatie van het event of attractie.</p>                
+                <p>Locatie van het event of attractie</p>                
                 <div class="input-control">
                     <input type="text" name="" id="Locatie" placeholder="">
                 </div> 
