--- a/uc8-uc9/bestemmingen.html
+++ b/uc8-uc9/bestemmingen.html
@@ -23,7 +23,7 @@
             </div>
             <div class="event-raad">
                 <a href="event_raadplegen.html">
-                    Event Raadplegen
+                    Events & Attracties Raadplegen
                 </a>
             </div>
             <div class="hamburger">
