toevoegen vakantiedagen pagina

--- a/uc8-uc9/bestemmingen.html
+++ b/uc8-uc9/bestemmingen.html
@@ -42,6 +42,10 @@
                 <a href="persoonsgegevens.html">
                     <h2>Persoongegevens</h2>
                 </a>
+
+            <a href="vakantiedagen.html">
+                <h2>Vakantiedagen</h2>
+            </a>
             </div>
             <div class="search">
                 <div class="search-2"></div>
