aanpassing: pagina vakantiedagen/comment HTML&CSS

--- a/uc8-uc9/vakantiedagen.html
+++ b/uc8-uc9/vakantiedagen.html
@@ -19,9 +19,25 @@
                     </a>
                 </div>
                 <div class="hi-user">hi, user</div>
-                <h2>Vakantiedagen</h2>
+                <h2>Bestemmingen</h2>
             </div>
-        
+            <div class="hamburger">
+                <a href="inloggen.html">
+                    <h2>EXIT</h2>
+                </a>
+                <a href="bestemmingen.html">
+                    <h2>Bestemmingen</h2>
+                </a>
+                <a href="event_raadplegen.html">
+                    <h2>Events & Attracties Raadplegen</h2>
+                </a>
+                <a href="events.html">
+                    <h2>Events & Attracties</h2>
+                </a>
+                <a href="persoonsgegevens.html">
+                    <h2>Persoongegevens</h2>
+                </a>
+            </div>
             <div class="search">
                 <div class="search-2"></div>
                 <div class="search-1"></div>
@@ -34,13 +50,32 @@
     </header>
     <main>
         <div class="container-vakantiedagen">
-          <p style="color: black; margin-top: 7cm;">Sory voor het ongemak, deze pagina bestaat niet. keer terug naar de bestemmingen pagina.</p>
-          <a href="bestemmingen.html" class="button">
-            <p style="text-align: center;">Bestemmingen</p>
-        </a>
-
+          <p>
+                Sory voor het ongemak, deze pagina bestaat niet. keer terug naar de 
+                    <a href="bestemmingen.html">
+                        <b>
+                            'bestemmingen pagina'
+                        </b>
+                    </a>
+                .
+                <br><br>
+                (
+                Deze pagina is in aanbouw! Keer terug naar de pagina 
+                    <a href="bestemmingen.html">
+                        <b>
+                            'bestemmingen pagina' 
+                        </b>
+                    </a>
+                .
+                )
+            </p>
         </div>
     </main>
+    <div class="skew-container">
+        <div class="skew-box"></div>
+        <div class="skew-box"></div>
+    </div>
+
     <footer>
         <p>
             <b>Ontwikkeld door</b>
@@ -59,7 +94,7 @@
                 AP Hogeschool.
             </a>
             <br>
-                2021
+            2021
         </p>
         <div class="footer-img">
             <a href="https://github.com/MalekKabro/IT-Project-The_Guys.git" target="_blank" rel="noopener noreferrer">
@@ -71,7 +106,7 @@
         <div class="skew-box"></div>
         <div class="skew-box"></div>
     </div>
-
+    
     <script src="js/ham.js"></script>
 </body>
 </html>
